updated the swagger files
